# digital-rivers

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: github-pages-mkdocs.yml  github-release.yml  pypi-release.yml  tests.yml
0.0.0/: 404.html  index.html  objects.inv  sitemap.xml
0.0.0/AUTHORS/: index.html
0.0.0/LICENSE/: index.html
0.0.0/adr/: index.html
0.0.0/adr/0001-docs-stack/: index.html
0.0.0/adr/0002-type-checking/: index.html
0.0.0/adr/0003-io-formats/: index.html
0.0.0/adr/0004-dependency-graphing/: index.html
0.0.0/adr/0005-versioning-docs/: index.html
0.0.0/change-log/: index.html
0.0.0/examples/01_hydrology_pipeline/: index.html
0.0.0/examples/02_watershed_analytics/: 02_watershed_analytics.ipynb  index.html
0.0.0/examples/03_terrain_indices/: index.html
0.0.0/examples/04_hydrologic_indices/: index.html
0.0.0/examples/05_stochastic_depressions/: index.html
0.0.0/examples/06_lidar_pipeline/: index.html
0.0.0/examples/07_mesh_and_fusion/: index.html
0.0.0/examples/08_cloud_io/: index.html
0.0.0/installation/: index.html
0.0.0/search/: search_index.json
develop/: 404.html  index.html  objects.inv  sitemap.xml
develop/AUTHORS/: index.html
develop/LICENSE/: index.html
develop/adr/: index.html
develop/change-log/: index.html
develop/installation/: index.html
develop/search/: search_index.json
docs/: change-log.md  index.md  installation.md
docs/adr/: 0003-io-formats.md  index.md
docs/examples/: 01_hydrology_pipeline.ipynb  02_watershed_analytics.ipynb  03_terrain_indices.ipynb  04_hydrologic_indices.ipynb  05_stochastic_depressions.ipynb  06_lidar_pipeline.ipynb  07_mesh_and_fusion.ipynb  08_cloud_io.ipynb
docs/guides/: hydrology-pipeline.md  lidar.md  terrain-indices.md  watershed-analytics.md
docs/reference/: accumulation.md  cloud_io.md  dem.md  flow_direction.md  fusion.md  lidar.md  mesh.md  stream_raster.md  terrain.md  watershed_raster.md
examples/: color-relief.py  water-body-detection.py
examples/notebooks/: 01_hydrology_pipeline.ipynb  02_watershed_analytics.ipynb  03_terrain_indices.ipynb  04_hydrologic_indices.ipynb  05_stochastic_depressions.ipynb  06_lidar_pipeline.ipynb  07_mesh_and_fusion.ipynb  08_cloud_io.ipynb  09_real_world_mt_hood.ipynb
main/: 404.html  index.html  objects.inv  sitemap.xml
main/AUTHORS/: index.html
main/LICENSE/: index.html
main/adr/: index.html
main/change-log/: index.html
main/installation/: index.html
main/search/: search_index.json
src/digitalrivers/: __init__.py  _accumulation.py  _breach.py  _flow_routing.py  _hand.py  _ihu.py  _metadata.py  _numba.py  _phase4_stubs.py  _pitremoval.py  _stream_order.py  _watershed.py  accumulation.py  cloud_io.py  dem.py  flow_direction.py  fusion.py  lidar.py  mesh.py  phase4.py  stream_raster.py  terrain.py  watershed_raster.py
tests/: conftest.py  test_accumulation_routing.py  test_anudem_biharmonic.py  test_backfill.py  test_backfill_3.py  test_basin_statistics.py  test_basins.py  test_breach_depressions.py  test_burn_streams.py  test_cloud_io.py  test_dem.py  test_export_and_subgrid.py  test_fill_depressions.py  test_flow_routing.py  test_fusion.py  test_grid_lidar.py  test_hand.py  test_hydro_extension_e2e.py  test_lidar.py  test_longest_flow_path.py  test_mesh.py  test_numba_fallback.py  test_pfafstetter.py  test_phase1_coverage_gaps.py  test_phase1_e2e.py  test_phase2_coverage_gaps.py  test_phase2_e2e.py  test_phase2_pipeline_e2e.py  test_phase3_conditioning.py  test_phase3_coverage_gaps.py  test_phase3_e2e.py  test_phase4_coverage_gaps.py  test_phase4_review_fixups.py  test_phase4_stubs.py  test_pyramids_contract.py  test_resolve_flats.py  test_snap_pour_points.py  test_stochastic_depressions.py  test_stream_extraction.py  test_stream_order.py  (+8 more)
tests/_conditioning/: test_breach.py  test_flats.py  test_pitremoval.py
tests/_flow/: test_accumulation.py  test_routing.py
tests/_streams/: test_hand.py  test_order.py
tests/accumulation/: test_snap_pour_points.py
tests/cloud_io/: test_cloud_io.py
tests/dem/: test_accumulate_flow.py  test_anudem_biharmonic.py  test_area_slope_indices.py  test_delete_basins.py  test_export_and_subgrid.py  test_terrain_indices.py  test_terrain_indices_e2e.py
tests/e2e/: test_backfill_2.py  test_full_hydro_pipeline.py  test_phase1_coverage_gaps.py  test_phase1_e2e.py  test_phase2_e2e.py  test_phase3_coverage_gaps.py  test_phase4_review_fixups.py
tests/flow_direction/: test_basins.py  test_isobasins.py  test_pfafstetter.py  test_upscale.py  test_upscale_ihu.py  test_watershed.py
tests/fusion/: test_fusion.py
tests/lidar/: test_lidar_e2e.py
tests/mesh/: test_mesh.py
tests/numba/: test_numba_fallback.py
tests/stream_raster/: test_main_stem.py  test_prune_short.py  test_stream_vectorisation.py  test_subbasins.py  test_upslope_flowpath_length.py
tests/terrain/: test_terrain_ruggedness_viewshed.py
tests/typed_results/: test_pyramids_contract.py
tests/watershed_raster/: test_basin_statistics.py
(+85 files in other folders)
